tests/diagnostics/catalog/snapshots/ir/IR0060.snap
error[IR0060]: IR_E_UNKNOWN_MEMBER
 --> tests/diagnostics/catalog/sources/ir/IR0060.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0060
  = help: keep IR validation diagnostics structured and catalog-backed
